ошибка в  названии шрифта

--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,7 @@ ul, li {
    margin-left: 37px;
 }
 .menu__item a {
-   font-family: 'Open Sans Smibold';
+   font-family: 'Open Sans Semibold';
    font-size: 20px;
    color: #212121;
 }
