header and about us

--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 @import 'fonts.css';
 
 body {
-   background: gray;
+   font-family: 'Open Sans';
 }
 
 ul, li {
@@ -28,3 +28,60 @@ ul, li {
    color: #868686;
 }
 /*Шапка*/
+.header > div {
+   color: white;
+   text-align: center;
+   padding: 180px 0;
+   background-size: cover;
+   background-position: 0 100%;
+   background-image: url(../img/header.png);
+}
+.header__title {
+   font-size: 55px;
+}
+.header__text {
+   font-size: 20px;
+   margin-bottom: 100px;
+}
+.button {
+   padding: 10px 25px;
+   margin: 0 10px;
+   color: white;
+   transition: 0.3s;
+}
+.button_empty {
+   background: transparent;
+   border: 2px solid white;
+}
+.button_full {
+   background: #00897b;
+   border: 2px solid #00897b;
+}
+.button_empty:hover,
+.button_full:hover {
+   border: 2px dotted white;
+   background: #04574e;
+}
+/*О нас*/
+.about {
+   padding-top: 120px;
+   padding-bottom: 125px;
+   color: black;
+   background: white;
+   text-align: center;
+}
+.about__title {
+   font-size: 30px;
+   font-weight: bold;
+}
+.about__text {
+   color: #212121;
+   font-size: 15px;
+   margin-bottom: 110px;
+}
+.about_h3 {
+   margin-top: 30px;
+   margin-bottom: 20px;
+   font-family: 'Open Sans Semibold';
+   font-size: 20px;
+}
