--- a/css/style.css
+++ b/css/style.css
@@ -86,3 +86,47 @@ ul, li {
    font-family: 'Open Sans Semibold';
    font-size: 20px;
 }
+/*Наши услуги*/
+.services {
+   padding-top: 165px;
+   padding-bottom: 125px;
+   color: black;
+   background: #e4fdf9;
+   text-align: center;
+}
+.our_card {
+   background: white;
+   padding: 50px 40px 40px;
+   transition: 0.3s;
+   margin-bottom: 30px;
+}
+.our_card:hover {
+   background: #00897b;
+   color: white;
+   box-shadow: 0px 10px 12px -3px rgba(0, 0, 0, 0.26);
+}
+.our_card:hover .icon {
+   color: white;
+}
+.our_card:hover .button-services {
+   border: 2px solid white;
+   color: white;
+}
+.icon {
+   transition: 0.3s;
+   font-size: 60px;
+   color: black;
+}
+.button-services {
+   margin-top: 20px;
+   transition: 0.3s;
+   color: black;
+   text-transform: uppercase;
+   border: 2px solid black;
+   background: transparent;
+   padding: 10px 12px 10px;
+   font-family: 'Open Sans Semibold';
+}
+.button-services:hover {
+   cursor: pointer;
+}
