--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,7 @@ ul, li {
    color: #868686;
 }
 /*Шапка*/
-.header > div {
+.header {
    color: white;
    text-align: center;
    padding: 180px 0;
@@ -44,24 +44,18 @@ ul, li {
    margin-bottom: 100px;
 }
 .button {
+   text-transform: uppercase;
+   cursor: pointer;
    padding: 10px 25px;
    margin: 0 10px;
    color: white;
    transition: 0.3s;
-}
-.button_empty {
-   background: transparent;
-   border: 2px solid white;
-}
-.button_full {
    background: #00897b;
    border: 2px solid #00897b;
 }
-.button_empty:hover,
-.button_full:hover {
-   border: 2px dotted white;
-   background: #04574e;
-   cursor: pointer;
+.button:hover {
+   background: transparent;
+   border: 2px solid white;
 }
 /*О нас*/
 .about {
@@ -129,4 +123,21 @@ ul, li {
 }
 .button-services:hover {
    cursor: pointer;
+}
+/*Портфолио*/
+.portfolio {
+   text-align: center;
+   padding-top: 120px;
+   padding-bottom: 135px;
+}
+.portfolio button:hover {
+   color: black;
+   background: transparent;
+   border: 2px solid #00897b;
+}
+.portfolio img {
+   margin-bottom: 30px;
+}
+.filter {
+   padding: 120px 0;
 }
