--- a/css/style.css
+++ b/css/style.css
@@ -166,7 +166,6 @@ div[filter]:hover .text {
    color: black;
    background: #f0f1f1;
    text-align: center;
-   
 }
 .price {
    transition: 0.5s;
@@ -227,4 +226,64 @@ div[filter]:hover .text {
    color: white;
    background: #00897b;
    border: none;
+}
+/* Команда */
+.team {
+   padding-top: 165px;
+   padding-bottom: 125px;
+   color: black;
+   background: #fff;
+   text-align: center;
+}
+.team h4 {
+   margin-top: 30px;
+   font-size: 20px;
+   font-family: 'Open Sans Semibold';
+}
+.team p {
+   font-size: 15px;
+   margin-bottom: 30px;
+}
+.icons {
+   display: flex;
+   justify-content: center;
+}
+.icons a i {
+   transition: 0.3s;
+}
+.icons i:nth-child(1) {
+   color: #f0f1f1;
+}
+.icons i:nth-child(2) {
+   color: #00897b;
+}
+.icons a:hover i:nth-child(1) {
+   color: #3949ab;
+}
+.icons a:hover i:nth-child(2) {
+   color: #fff;
+}
+.team img {
+   margin: 0 auto;
+   max-width: 340px;
+}
+.multiple-items {
+   margin-top: 125px;
+}
+.dots-style {
+   margin-top: 115px;
+   display: flex;
+   justify-content: center;
+}
+.dots-style button {
+   background: #00897b;
+   border: none;
+   border-radius: 50%;
+   font-size: 0;
+   height: 15px;
+   width: 15px;
+   margin: 5px;
+}
+.dots-style li[class="slick-active"] button {
+   background: #3949ab;
 }
